# whitehack-tools-tauri

./: .env.notarize.example  .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  UPGRADE_PLAN.md  build.ps1  build.sh  dev.bat  dev.ps1  dev.sh  setup.ps1  setup.sh
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: main.rs
frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: tauri.ts
frontend/src/lib/components/: index.ts
frontend/src/lib/components/character/: CharacterList.svelte  CharacterListHeader.svelte  CharacterListItem.svelte  ExportModal.svelte  ImportModal.svelte  index.ts
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  ConfirmDialog.svelte  EmptyState.svelte  IconCircle.svelte  Input.svelte  Modal.svelte  NumberInput.svelte  ProgressBar.svelte  Select.svelte  TabPicker.svelte  TextArea.svelte  Toggle.svelte  index.ts
frontend/src/lib/data/: armor.ts  gear.ts  index.ts  weapons.ts
frontend/src/lib/models/: ClassFeatures.ts  Enums.ts  Equipment.ts  PlayerCharacter.ts  index.ts
frontend/src/lib/stores/: characters.svelte.ts  database.ts  index.ts  ui.svelte.ts
frontend/src/lib/utils/: AdvancementTables.ts  classColors.ts  classDescriptions.ts  computed.ts  importExport.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/test/: +page.svelte
(+31 files in other folders)
